--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Games & Apps Hub</title>
+  <title>Cloverdust V.1</title>
   <style>
     body { font-family: Arial, sans-serif; background:#111; color:#eee; margin:0; }
     header { background:#222; padding:12px; text-align:center; position:sticky; top:0; }
@@ -42,7 +42,7 @@
 
   <!-- Home -->
   <section id="home" class="active">
-    <h1>Welcome to the Hub</h1>
+    <h1>Welcome to the Cloverdust Hub</h1>
     <p>Use the navigation above to explore Games and Apps.</p>
     <h2>Search</h2>
     <input type="text" id="searchBox" placeholder="Type to search games or apps..." />
@@ -51,9 +51,13 @@
   <!-- Games -->
   <section id="games">
     <h2>Games</h2>
-    <a href="/snake">Snake</a>
-    <a href="/flappy">Flappy Square</a>
-    <a href="/breakout">Breakout</a>
+    <a href="/1v1lol">1v1 lol</a>
+    <a href="/2048">2048</a>
+    <a href="/2drocketleague">2d rocket league</a>
+    <a href="/60sburgerrun">60 second burger run</a>
+    <a href="/achieveunlocked">achieve unlocked</a>
+    <a href="/achieveunlocked2">achievment unlocked 2</a>
+    <a href="/amazing-rope-police">amazing strange rope police</a>
   </section>
 
   <!-- Apps -->
