--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cloverdust V.1</title>
+  <title>Games & Apps Hub</title>
   <style>
     body { font-family: Arial, sans-serif; background:#111; color:#eee; margin:0; }
     header { background:#222; padding:12px; text-align:center; position:sticky; top:0; }
@@ -42,22 +42,25 @@
 
   <!-- Home -->
   <section id="home" class="active">
-    <h1>Welcome to the Cloverdust Hub</h1>
+    <h1>Welcome to the Hub</h1>
     <p>Use the navigation above to explore Games and Apps.</p>
-    <h2>Search</h2>
-    <input type="text" id="searchBox" placeholder="Type to search games or apps..." />
   </section>
 
   <!-- Games -->
   <section id="games">
     <h2>Games</h2>
-    <a href="/1v1lol">1v1 lol</a>
-    <a href="/2048">2048</a>
-    <a href="/2drocketleague">2d rocket league</a>
-    <a href="/60sburgerrun">60 second burger run</a>
-    <a href="/achieveunlocked">achieve unlocked</a>
-    <a href="/achieveunlocked2">achievment unlocked 2</a>
-    <a href="/amazing-rope-police">amazing strange rope police</a>
+    <input type="text" id="gameSearch" placeholder="Search games..." />
+    <div id="gamesList">
+      
+      <a href="/1v1lol">1v1 lol</a>
+      <a href="/2048">2048</a>
+      <a href="/2drocketleague">2d rocket league</a>
+      <a href="/60sburgerrun">60 second burger run</a>
+      <a href="/achieveunlocked">achieve unlocked</a>
+      <a href="/achieveunlocked2">achievement unlocked 2</a>
+      <a href="/amazing-rope-police">amazing strange rope police</a>
+      <a href="/roblox">roblox</a>
+    </div>
   </section>
 
   <!-- Apps -->
@@ -79,11 +82,11 @@
       document.getElementById(id).classList.add('active');
     }
 
-    // Live search filter
-    const searchBox = document.getElementById('searchBox');
-    searchBox.addEventListener('input', () => {
-      const term = searchBox.value.toLowerCase();
-      const links = document.querySelectorAll('section a');
+    // Search filter for games
+    const gameSearch = document.getElementById('gameSearch');
+    gameSearch.addEventListener('input', () => {
+      const term = gameSearch.value.toLowerCase();
+      const links = document.querySelectorAll('#gamesList a');
       links.forEach(link => {
         const text = link.textContent.toLowerCase();
         if (term && !text.includes(term)) {
