--- a/index.html
+++ b/index.html
@@ -56,10 +56,15 @@
       <a href="/2048">2048</a>
       <a href="/2drocketleague">2d rocket league</a>
       <a href="/60sburgerrun">60 second burger run</a>
-      <a href="/achieveunlocked">achieve unlocked</a>
-      <a href="/achieveunlocked2">achievement unlocked 2</a>
-      <a href="/amazing-rope-police">amazing strange rope police</a>
-      <a href="/roblox">roblox</a>
+      <a href="/achieveunlocked">Achieve unlocked</a>
+      <a href="/achieveunlocked2">Achievement unlocked 2</a>
+      <a href="/amazing-rope-police">Amazing strange rope police</a>
+        <a href="/BTD">Bloons tower defense</a>
+        <a href="/bit-planes">Bloons tower defense</a>
+     <a href="/drivemad">Drive mad</a>
+      <a href="/fortnite">Fortnite battle royale</a>
+       <a href="/retrobowl">Retro bowl</a>
+      <a href="/roblox">Roblox</a>
     </div>
   </section>
 
