--- a/index.html
+++ b/index.html
@@ -59,12 +59,17 @@
       <a href="/achieveunlocked">Achieve unlocked</a>
       <a href="/achieveunlocked2">Achievement unlocked 2</a>
       <a href="/amazing-rope-police">Amazing strange rope police</a>
+      <a href="/basketrandom">Basket random</a>
         <a href="/BTD">Bloons tower defense</a>
         <a href="/bit-planes">Bloons tower defense</a>
      <a href="/drivemad">Drive mad</a>
       <a href="/fortnite">Fortnite battle royale</a>
+       <a href="/ovo">OvO</a>
+      <a href="/getawayshootout">Getaway Shootout</a>
        <a href="/retrobowl">Retro bowl</a>
       <a href="/roblox">Roblox</a>
+      <a href="/snowrider">Snow rider 3d</a>
+       <a href="/tag">Tag</a>
     </div>
   </section>
 
