--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
         <img src="IMAGE-LINK-HERE" class="game-img">
         <a href="/gunspin">Gunspin</a>
       </div>
+       <div class="game-item">
+        <img src="IMAGE-LINK-HERE" class="game-img">
+        <a href="/houseofhazards">house of hazards</a>
+      </div>
 
       <div class="game-item">
         <img src="IMAGE-LINK-HERE" class="game-img">
