--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
 
       <div class="game-item">
         <img src="IMAGE-LINK-HERE" class="game-img">
-        <a href="/bit-planes">Bloons tower defense</a>
+        <a href="/bit-planes">Bit-planes</a>
+      </div>
+       <div class="game-item">
+        <img src="IMAGE-LINK-HERE" class="game-img">
+        <a href="/clashroyale">Clash royale</a>
       </div>
 
       <div class="game-item">
