--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
       <div class="game-item">
         <img src="IMAGE-LINK-HERE">
         <a href="/ovo">OvO</a>
+      </div> <div class="game-item">
+        <img src="IMAGE-LINK-HERE">
+        <a href="/ragdoll-archers">RAGDOLL ARCHERS</a>
       </div>
 
       <div class="game-item">
