--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Games & Apps Hub</title>
+  <title>Cloverdust v1</title>
   <style>
     body { font-family: Arial, sans-serif; background:#111; color:#eee; margin:0; }
     header { background:#222; padding:12px; text-align:center; position:sticky; top:0; }
@@ -61,7 +61,7 @@
 
   <!-- Home -->
   <section id="home" class="active">
-    <h1>Welcome to the Hub</h1>
+    <h1>Welcome to Cloverdust v1</h1>
     <p>Use the navigation above to explore Games and Apps.</p>
   </section>
 
