--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
     <div id="appsList" class="hidden">
       <a href="/calculator">Calculator</a>
       <a href="/notes">Notes</a>
-      <a href="/music">Music Player</a>
-      <a href="/tapps">Apps Hub</a>
+      <a href="/index.html">Comming soon</a>
+      <a href="/index.html">Comming soon</a>
     </div>
   </section>
 
