--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -73,107 +74,109 @@
     <div id="gamesList">
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.I8HLfUGlR1d2_DGG6tefIAHaHa?w=158&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/1v1lol">1v1 lol</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.e286FBV8OQZ5NgP81MG8JgHaHa?w=177&h=150&c=6&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/2048">2048</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.vZWQJT6wjn4GiekFyd5IIgAAAA?w=175&h=176&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/2drocketleague">2d rocket league</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.JQWN3QX16mawPwT0GUGYlQAAAA?w=159&h=159&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/60sburgerrun">60 second burger run</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.Cs26K2hry22jobC72DaJ7QHaHa?w=176&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/achieveunlocked">Achieve unlocked</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.7rVR4cP6xCY7d_OrPvUj0wHaCa?w=265&h=113&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/achieveunlocked2">Achievement unlocked 2</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.coAYMqLcitXy9-2hCbHtigHaEJ?w=228&h=150&c=6&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/amazing-rope-police">Amazing strange rope police</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.xRh6FFYDD2hNtHrPA7dz9wHaHa?w=192&h=192&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/basketrandom">Basket random</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.Hk1xn6Ptyn8038d5KTwHmwHaFj?w=238&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/BTD">Bloons tower defense</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.8uRNX15BzJ9YkM_33GTI7QHaEK?w=273&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/bit-planes">Bit-planes</a>
       </div>
        <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.G5ZBZZLUevc64WnXofQtPQHaHa?w=175&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/clashroyale">Clash royale</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.0xYcoOvcQdj3hDj9cuHCMgAAAA?w=170&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/drivemad">Drive mad</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.UAE_up5doVVVgWea0LEYcwHaEK?w=275&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/fortnite">Fortnite battle royale</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE">
+        <img src="https://th.bing.com/th?q=Ovo+Game+Funny+Moments&w=120&h=120&c=1&rs=1&qlt=70&o=7&cb=1&dpr=1.3&pid=InlineBlock&rm=3&mkt=en-US&cc=US&setlang=en&adlt=strict&t=1&mw=247">
         <a href="/ovo">OvO</a>
-      </div> <div class="game-item">
-        <img src="IMAGE-LINK-HERE">
+      </div>
+      <div class="game-item">
+      
+      <img src="https://th.bing.com/th/id/OIP.B6TEIh0X_XQ_KZDB38-GPAAAAA?w=112&h=112&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3">
         <a href="/ragdoll-archers">RAGDOLL ARCHERS</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.c_3d4-j5I2A2dbcDGsTM7gHaFj?w=210&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/getawayshootout">Getaway Shootout</a>
       </div>
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.RWPUEADkTCIgFxXvD7w1xAAAAA?w=108&h=108&c=1&bgcl=3e335f&r=0&o=7&dpr=1.3&pid=ImgRC&rm=3" class="game-img">
         <a href="/gunspin">Gunspin</a>
       </div>
        <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.6dpOBBlkx3KO5MbTL50l1gAAAA?w=165&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/houseofhazards">house of hazards</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.8am2DMBUCmuzXS9iU83kPwHaD9?w=326&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/retrobowl">Retro bowl</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th?q=Fun+Games+On+Roblox&w=120&h=120&c=1&rs=1&qlt=70&o=7&cb=1&dpr=1.3&pid=InlineBlock&rm=3&mkt=en-US&cc=US&setlang=en&adlt=strict&t=1&mw=247" class="game-img">
         <a href="/roblox">Roblox</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.y9F_khvzr-1fRXn8JpxLYAAAAA?w=80&h=80&c=12&rs=1&r=0&o=6&dpr=1.3&pid=23.1" class="game-img">
         <a href="/snowrider">Snow rider 3d</a>
       </div>
 
       <div class="game-item">
-        <img src="IMAGE-LINK-HERE" class="game-img">
+        <img src="https://th.bing.com/th/id/OIP.L57SUDEgyDMb6VQ3LeNzSwHaHa?w=176&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/tag">Tag</a>
       </div>
 
@@ -225,4 +228,59 @@
     });
   </script>
 </body>
-</html>
+</html><head>
+  <meta charset="UTF-8">
+  <title>Cloverdust v1</title>
+
+  <!-- 🎮 Favicon -->
+  <link rel="icon" href="data:image/svg+xml,
+  <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
+    <text y='.9em' font-size='90'>🎮</text>
+  </svg>">
+
+  <style>
+    body { font-family: Arial, sans-serif; background:#111; color:#eee; margin:0; }
+    header { background:#222; padding:12px; text-align:center; position:sticky; top:0; }
+    nav a {
+      display:inline-block; margin:0 12px; padding:8px 14px;
+      background:#333; color:#6ee7ff; text-decoration:none; border-radius:6px;
+    }
+    nav a:hover { background:#555; }
+    section { padding:40px; text-align:center; display:none; }
+    section.active { display:block; }
+
+    /* Game item layout */
+    .game-item {
+      display:inline-block;
+      width:150px;
+      margin:15px;
+      text-align:center;
+    }
+
+    .game-img {
+      width:150px;
+      height:100px;
+      object-fit:cover;
+      border-radius:6px;
+      margin-bottom:10px;
+      background:#333;
+    }
+
+    a {
+      display:inline-block; padding:8px 12px;
+      background:#333; color:#6ee7ff; text-decoration:none; border-radius:6px;
+    }
+    a:hover { background:#555; }
+
+    input[type="text"] {
+      padding:10px; width:250px; border-radius:6px; border:1px solid #444;
+      background:#222; color:#eee;
+    }
+    button {
+      padding:10px 16px; border:none; border-radius:6px;
+      background:#6ee7ff; color:#111; cursor:pointer; margin-top:20px;
+    }
+    button:hover { background:#55cce0; }
+    .hidden { display:none; }
+  </style>
+</head>
