--- a/index.html
+++ b/index.html
@@ -284,3 +284,49 @@
     .hidden { display:none; }
   </style>
 </head>
+<!-- DARK BACKGROUND OVERLAY -->
+<div id="overlay" style="
+    display:none;
+    position: fixed;
+    top:0;
+    left:0;
+    width:100vw;
+    height:100vh;
+    background: rgba(0,0,0,0.95);
+    z-index: 9998;
+"></div>
+
+<!-- CENTERED GAME BOX -->
+<div id="gameBox" style="
+    display:none;
+    position: fixed;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 900px;
+    background:#000;
+    padding:15px;
+    border-radius:10px;
+    z-index: 9999;
+    text-align:center;
+">
+    <iframe id="gameFrame"
+        width="100%"
+        height="500"
+        style="border:none; background:black; border-radius:8px;">
+    </iframe>
+
+    <!-- FULLSCREEN BUTTON AT BOTTOM -->
+    <button id="fullscreenBtn" style="
+        margin-top:12px;
+        padding:10px 18px;
+        width:100%;
+        background:#222;
+        color:white;
+        border:2px solid #444;
+        border-radius:6px;
+        cursor:pointer;
+        font-size:16px;
+    ">Fullscreen</button>
+</div>
