--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
         <img src="https://th.bing.com/th/id/OIP.Hk1xn6Ptyn8038d5KTwHmwHaFj?w=238&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/BTD">Bloons tower defense</a>
       </div>
+      
+      <div class="game-item">
+        <img src="https://th.bing.com/th/id/OIP.rllAIS8CBA9rFUrbIahisQHaD4?w=291&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
+        <a href="/Bridgerace">Bridge race</a>
+      </div>
 
       <div class="game-item">
         <img src="https://th.bing.com/th/id/OIP.8uRNX15BzJ9YkM_33GTI7QHaEK?w=273&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
@@ -126,10 +131,19 @@
         <img src="https://th.bing.com/th/id/OIP.G5ZBZZLUevc64WnXofQtPQHaHa?w=175&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/clashroyale">Clash royale</a>
       </div>
+       <div class="game-item">
+        <img src="https://th.bing.com/th/id/OIP.qI7ZaVgVzajMHPWak-qSnAHaHa?w=108&h=108&c=1&bgcl=29085b&r=0&o=7&dpr=1.3&pid=ImgRC&rm=3" class="game-img">
+        <a href="/Driftboss">Drift boss</a>
+      </div>
 
       <div class="game-item">
         <img src="https://th.bing.com/th/id/OIP.0xYcoOvcQdj3hDj9cuHCMgAAAA?w=170&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
         <a href="/drivemad">Drive mad</a>
+      </div>
+      
+      <div class="game-item">
+        <img src="https://th.bing.com/th/id/OIP.rnzhiOoLElFWnDetYGh_ZwHaE8?w=255&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
+        <a href="/Eggy-car">Eggy car</a>
       </div>
 
       <div class="game-item">
@@ -284,49 +298,3 @@
     .hidden { display:none; }
   </style>
 </head>
-<!-- DARK BACKGROUND OVERLAY -->
-<div id="overlay" style="
-    display:none;
-    position: fixed;
-    top:0;
-    left:0;
-    width:100vw;
-    height:100vh;
-    background: rgba(0,0,0,0.95);
-    z-index: 9998;
-"></div>
-
-<!-- CENTERED GAME BOX -->
-<div id="gameBox" style="
-    display:none;
-    position: fixed;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-    max-width: 900px;
-    background:#000;
-    padding:15px;
-    border-radius:10px;
-    z-index: 9999;
-    text-align:center;
-">
-    <iframe id="gameFrame"
-        width="100%"
-        height="500"
-        style="border:none; background:black; border-radius:8px;">
-    </iframe>
-
-    <!-- FULLSCREEN BUTTON AT BOTTOM -->
-    <button id="fullscreenBtn" style="
-        margin-top:12px;
-        padding:10px 18px;
-        width:100%;
-        background:#222;
-        color:white;
-        border:2px solid #444;
-        border-radius:6px;
-        cursor:pointer;
-        font-size:16px;
-    ">Fullscreen</button>
-</div>
