--- a/Bridgerace/index.html
+++ b/Bridgerace/index.html
@@ -1,286 +1,213 @@
-
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
+
 <head>
+  
+  
+  <base href="https://cdn.jsdelivr.net/gh/bubbls/youtube-playables@213d19aad1db5acdebe8e07a80ae4998f3146e33/bridge-race/">
   <meta charset="UTF-8">
-  <title>Cloverdust v1</title>
-  <style>
-    body { font-family: Arial, sans-serif; background:#111; color:#eee; margin:0; }
-    header { background:#222; padding:12px; text-align:center; position:sticky; top:0; }
-    nav a {
-      display:inline-block; margin:0 12px; padding:8px 14px;
-      background:#333; color:#6ee7ff; text-decoration:none; border-radius:6px;
-    }
-    nav a:hover { background:#555; }
-    section { padding:40px; text-align:center; display:none; }
-    section.active { display:block; }
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    /* Game item layout */
-    .game-item {
-      display:inline-block;
-      width:150px;
-      margin:15px;
-      text-align:center;
-    }
-
-    .game-img {
-      width:150px;
-      height:100px;
-      object-fit:cover;
-      border-radius:6px;
-      margin-bottom:10px;
-      background:#333;
-    }
-
-    a {
-      display:inline-block; padding:8px 12px;
-      background:#333; color:#6ee7ff; text-decoration:none; border-radius:6px;
-    }
-    a:hover { background:#555; }
-
-    input[type="text"] {
-      padding:10px; width:250px; border-radius:6px; border:1px solid #444;
-      background:#222; color:#eee;
-    }
-    button {
-      padding:10px 16px; border:none; border-radius:6px;
-      background:#6ee7ff; color:#111; cursor:pointer; margin-top:20px;
-    }
-    button:hover { background:#55cce0; }
-    .hidden { display:none; }
-  </style>
+  <title>YT Game Wrapper WebGL Template</title>
+  <link rel="stylesheet" href="TemplateData/style.css" nonce="xc9yLMIA-AeOcD4uccnAOg">
+  <script src="https://cdn.jsdelivr.net/gh/bubbls/youtube-playables@main/ytgame.js" nonce="xc9yLMIA-AeOcD4uccnAOg">// Load YT Game API code</script>
 </head>
+
 <body>
-  <!-- Top navigation -->
-  <header>
-    <nav>
-      <a href="#home" onclick="showSection('home')">Home</a>
-      <a href="#games" onclick="showSection('games')">Games</a>
-      <a href="#apps" onclick="showSection('apps')">Apps</a>
-    </nav>
-  </header>
-
-  <!-- Home -->
-  <section id="home" class="active">
-    <h1>Welcome to Cloverdust v1</h1>
-    <p>Use the navigation above to explore Games and Apps.</p>
-  </section>
-
-  <!-- Games -->
-  <section id="games">
-    <h2>Games</h2>
-    <input type="text" id="gameSearch" placeholder="Search games..." />
-    <div id="gamesList">
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.I8HLfUGlR1d2_DGG6tefIAHaHa?w=158&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/1v1lol">1v1 lol</a>
+  <div id="unity-container" class="unity-desktop">
+    <canvas id="unity-canvas" width=100% height=100% tabindex="-1"></canvas>
+    <div id="unity-loading-bar">
+      <div id="unity-logo"></div>
+      <div id="unity-progress-bar-empty">
+        <div id="unity-progress-bar-full"></div>
       </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.e286FBV8OQZ5NgP81MG8JgHaHa?w=177&h=150&c=6&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/2048">2048</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.vZWQJT6wjn4GiekFyd5IIgAAAA?w=175&h=176&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/2drocketleague">2d rocket league</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.JQWN3QX16mawPwT0GUGYlQAAAA?w=159&h=159&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/60sburgerrun">60 second burger run</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.Cs26K2hry22jobC72DaJ7QHaHa?w=176&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/achieveunlocked">Achieve unlocked</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.7rVR4cP6xCY7d_OrPvUj0wHaCa?w=265&h=113&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/achieveunlocked2">Achievement unlocked 2</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.coAYMqLcitXy9-2hCbHtigHaEJ?w=228&h=150&c=6&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/amazing-rope-police">Amazing strange rope police</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.xRh6FFYDD2hNtHrPA7dz9wHaHa?w=192&h=192&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/basketrandom">Basket random</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.Hk1xn6Ptyn8038d5KTwHmwHaFj?w=238&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/BTD">Bloons tower defense</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.8uRNX15BzJ9YkM_33GTI7QHaEK?w=273&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/bit-planes">Bit-planes</a>
-      </div>
-       <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.G5ZBZZLUevc64WnXofQtPQHaHa?w=175&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/clashroyale">Clash royale</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.0xYcoOvcQdj3hDj9cuHCMgAAAA?w=170&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/drivemad">Drive mad</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.UAE_up5doVVVgWea0LEYcwHaEK?w=275&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/fortnite">Fortnite battle royale</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th?q=Ovo+Game+Funny+Moments&w=120&h=120&c=1&rs=1&qlt=70&o=7&cb=1&dpr=1.3&pid=InlineBlock&rm=3&mkt=en-US&cc=US&setlang=en&adlt=strict&t=1&mw=247">
-        <a href="/ovo">OvO</a>
-      </div>
-      <div class="game-item">
-      
-      <img src="https://th.bing.com/th/id/OIP.B6TEIh0X_XQ_KZDB38-GPAAAAA?w=112&h=112&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3">
-        <a href="/ragdoll-archers">RAGDOLL ARCHERS</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.c_3d4-j5I2A2dbcDGsTM7gHaFj?w=210&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/getawayshootout">Getaway Shootout</a>
-      </div>
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.RWPUEADkTCIgFxXvD7w1xAAAAA?w=108&h=108&c=1&bgcl=3e335f&r=0&o=7&dpr=1.3&pid=ImgRC&rm=3" class="game-img">
-        <a href="/gunspin">Gunspin</a>
-      </div>
-       <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.6dpOBBlkx3KO5MbTL50l1gAAAA?w=165&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/houseofhazards">house of hazards</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.8am2DMBUCmuzXS9iU83kPwHaD9?w=326&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/retrobowl">Retro bowl</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th?q=Fun+Games+On+Roblox&w=120&h=120&c=1&rs=1&qlt=70&o=7&cb=1&dpr=1.3&pid=InlineBlock&rm=3&mkt=en-US&cc=US&setlang=en&adlt=strict&t=1&mw=247" class="game-img">
-        <a href="/roblox">Roblox</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.y9F_khvzr-1fRXn8JpxLYAAAAA?w=80&h=80&c=12&rs=1&r=0&o=6&dpr=1.3&pid=23.1" class="game-img">
-        <a href="/snowrider">Snow rider 3d</a>
-      </div>
-
-      <div class="game-item">
-        <img src="https://th.bing.com/th/id/OIP.L57SUDEgyDMb6VQ3LeNzSwHaHa?w=176&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" class="game-img">
-        <a href="/tag">Tag</a>
-      </div>
-
     </div>
-  </section>
+    <div id="unity-warning"> </div>
+  </div>
 
-  <!-- Apps -->
-  <section id="apps">
-    <h2>Apps</h2>
-    <button id="toggleApps">Show Apps</button>
-    <div id="appsList" class="hidden">
-      <a href="/calculator">Calculator</a>
-      <a href="/notes">Notes</a>
-      <a href="/index.html">Comming soon</a>
-      <a href="/index.html">Comming soon</a>
-    </div>
-  </section>
+  <script src="unarchiver.min.js" nonce="xc9yLMIA-AeOcD4uccnAOg">// used for decompression if zip files are used</script>
+  <script nonce="xc9yLMIA-AeOcD4uccnAOg"> // Logic for Unity contianer
+    var container = document.querySelector("#unity-container");
+    var canvas = document.querySelector("#unity-canvas");
+    var loadingBar = document.querySelector("#unity-loading-bar");
+    var progressBarFull = document.querySelector("#unity-progress-bar-full");
+    var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+    var fullscreenOverlayButton = document.querySelector("#unity-overlay-fullscreen-button");
+    var quitcanvas = document.querySelector("#quit-canvas");
+    var warningBanner = document.querySelector("#unity-warning");
 
-  <script>
-    function showSection(id) {
-      document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
+    // For YT it is strongly encouraged that all warnings / errors show in
+    // console and banners should be in game as needed to not confuse users.
+    // 
+    // If needed please uncomment section below to show a temporary message 
+    // banner/ribbon for a few seconds, or a permanent error message on top 
+    // of the canvas if type=='error'.
+    function unityShowBanner(msg, type) {
+      // function updateBannerVisibility() {
+      //   warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+      // }
+      // var div = document.createElement('div');
+      // div.innerHTML = msg;
+      // warningBanner.appendChild(div);
+      // if (type == 'error') div.style = 'background: red; padding: 10px;';
+      // else {
+      //   if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+      //   setTimeout(function() {
+      //     warningBanner.removeChild(div);
+      //     updateBannerVisibility();
+      //   }, 5000);
+      // }
+      // updateBannerVisibility();
     }
 
-    const gameSearch = document.getElementById('gameSearch');
-    gameSearch.addEventListener('input', () => {
-      const term = gameSearch.value.toLowerCase();
-      const items = document.querySelectorAll('#gamesList .game-item');
-      items.forEach(item => {
-        const text = item.textContent.toLowerCase();
-        if (term && !text.includes(term)) {
-          item.classList.add('hidden');
-        } else {
-          item.classList.remove('hidden');
-        }
-      });
-    });
+    var buildUrl = "Build";
+    var loaderUrl = buildUrl + "/BridgeRace.loader.js";
+    var config = {
+      dataUrl: buildUrl + "/BridgeRace.data.unityweb",
+      frameworkUrl: buildUrl + "/BridgeRace.framework.js.unityweb",
+        codeUrl: buildUrl + "/BridgeRace.wasm.unityweb",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "Garawell",
+      productName: "Bridge Race",
+      productVersion: "3.21",
+      showBanner: unityShowBanner,
+    };
 
-    const toggleBtn = document.getElementById('toggleApps');
-    const appsList = document.getElementById('appsList');
-    toggleBtn.addEventListener('click', () => {
-      if (appsList.classList.contains('hidden')) {
-        appsList.classList.remove('hidden');
-        toggleBtn.textContent = "Hide Apps";
-      } else {
-        appsList.classList.add('hidden');
-        toggleBtn.textContent = "Show Apps";
+    // By default, Unity keeps WebGL canvas render target size matched with
+    // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+    // Set this to false if you want to decouple this synchronization from
+    // happening inside the engine, and you would instead like to size up
+    // the canvas DOM size and WebGL render target sizes yourself.
+    // config.matchWebGLToCanvasSize = false;
+
+    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+      // Mobile device style: fill the whole browser client area with the game canvas:
+
+      var meta = document.createElement('meta');
+      meta.name = 'viewport';
+      meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+      document.getElementsByTagName('head')[0].appendChild(meta);
+      container.className = "unity-mobile";
+      canvas.className = "unity-mobile";
+
+      // To lower canvas resolution on mobile devices to gain some
+      // performance, uncomment the following line:
+      // config.devicePixelRatio = 1;
+
+    } else {
+      // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+      canvas.style.width = "100%";
+      canvas.style.height = "100%";
+    }
+
+    loadingBar.style.display = "block";
+
+    // loadResources is only used if you need load Zipped files for .wasm, .js, or .data and need 
+    // them to be decompressed. If the file is not zipped we bypass decompression step automatically,
+    // however its best to not trigger this if you dont used compression. 
+    // NOTE: GZip does not work ATM.  If this is needed Unarchiver will need to be updated.
+    loadResources = (callback) => {
+      const subZipStr = '.zip';
+      const subWASMStr = '.wasm';
+      const subJSStr = '.js';
+
+      var codeUrl = config.codeUrl;
+      var shouldDecompress = true;
+
+      // check if .zip already exists in the URL, if it doesnt check if a .zip file exists
+      if (!codeUrl.includes(subZipStr)) {
+        if (UrlExists(codeUrl + subZipStr)) {
+          codeUrl = codeUrl + subZipStr;
+        } else {
+          shouldDecompress = false;
+        }
       }
-    });
+
+      // decompress if using a zip file, otherwise just load regular wasm file
+      if (shouldDecompress) {
+        // Decompress the file based on the type, WASM, JS, etc.
+        // if you need more types please add a const above and modify the type logic below.
+        var blobType = 'application/octet-stream';
+        if (codeUrl.includes(subWASMStr)){
+          blobType = 'application/wasm';
+        } else if (codeUrl.includes(subJSStr)){
+          blobType = 'text/javascript';
+        }
+        
+        DecompressFile(codeUrl, blobType, (file) => {
+          config.codeUrl = file;
+          callback();
+        });
+      } else {
+        callback();
+      }
+    }
+
+    // Fetch/Load a file then call our callback 
+    loadZipData = (url, callback) => {
+      fetch(url)
+        .then(response => response.blob())
+        .then(blob => {
+          callback(blob);
+        });
+    }
+
+    // Check if URL / File exists
+    function UrlExists(urlToCheck)
+    {
+        var httpReq = new XMLHttpRequest();
+        httpReq.open('HEAD', urlToCheck, false);
+        httpReq.send();
+        return httpReq.status!=404;
+    }
+
+    // decompress files and call callback
+    // TODO: test and potentially switch to Compression Streams API
+    function DecompressFile(file, blobMimeType, callback) {
+      let decompressedFile;
+
+      loadZipData(file, (f) => {
+        Unarchiver.open(f).then(async function (archive) {
+          for (let entry of archive.entries) {
+            if (entry.is_file) {
+              let entryRead = await entry.read();
+              let entryData = await entryRead.arrayBuffer();
+              let dataBlob = new Blob([new Uint8Array(entryData)], { type: blobMimeType });
+              decompressedFile = window.URL.createObjectURL(dataBlob);
+            }
+          }
+          callback(decompressedFile);
+        });
+      });
+    }
+
+    var unityGameInstance = null;
+    // Setup the Unity section once zip file is downloaded and decompressed
+    function InitUnitySection() {
+      var script = document.createElement("script");
+      script.src = loaderUrl;
+      script.onload = () => {
+        createUnityInstance(canvas, config, (progress) => {
+          progressBarFull.style.width = 100 * progress + "%";
+          }).then((unityInstance) => {
+            unityGameInstance = unityInstance;
+            loadingBar.style.display = "none";
+          }).catch((message) => {
+            console.error(message);
+          });
+      };
+
+      document.body.appendChild(script);
+    }
+
+    // Path 1: Use this path if no decompression of your .wasm, .data, .js files are needed
+    InitUnitySection();
+
+    // Path 2: Use this path to Load resources (.wasm, .data, .js) that are Zipped and need to be decompressed
+    // if you dont use compresseion its best to comment out Path 1 and uncomment Path 2.
+    // loadResources(InitUnitySection);  // Uncomment this line to start Unity by loading zipped files
   </script>
 </body>
-</html><head>
-  <meta charset="UTF-8">
-  <title>Cloverdust v1</title>
-
-  <!-- 🎮 Favicon -->
-  <link rel="icon" href="data:image/svg+xml,
-  <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
-    <text y='.9em' font-size='90'>🎮</text>
-  </svg>">
-
-  <style>
-    body { font-family: Arial, sans-serif; background:#111; color:#eee; margin:0; }
-    header { background:#222; padding:12px; text-align:center; position:sticky; top:0; }
-    nav a {
-      display:inline-block; margin:0 12px; padding:8px 14px;
-      background:#333; color:#6ee7ff; text-decoration:none; border-radius:6px;
-    }
-    nav a:hover { background:#555; }
-    section { padding:40px; text-align:center; display:none; }
-    section.active { display:block; }
-
-    /* Game item layout */
-    .game-item {
-      display:inline-block;
-      width:150px;
-      margin:15px;
-      text-align:center;
-    }
-
-    .game-img {
-      width:150px;
-      height:100px;
-      object-fit:cover;
-      border-radius:6px;
-      margin-bottom:10px;
-      background:#333;
-    }
-
-    a {
-      display:inline-block; padding:8px 12px;
-      background:#333; color:#6ee7ff; text-decoration:none; border-radius:6px;
-    }
-    a:hover { background:#555; }
-
-    input[type="text"] {
-      padding:10px; width:250px; border-radius:6px; border:1px solid #444;
-      background:#222; color:#eee;
-    }
-    button {
-      padding:10px 16px; border:none; border-radius:6px;
-      background:#6ee7ff; color:#111; cursor:pointer; margin-top:20px;
-    }
-    button:hover { background:#55cce0; }
-    .hidden { display:none; }
-  </style>
-</head>
+</html>
